style: fix leaderboard navbar gap and use updated luffy mobile bg

--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@ button {
 
 @media (max-width: 900px) {
   .bg-home {
-    background-image: url('https://res.cloudinary.com/dmajc7wkx/image/upload/v1772731518/luffy_mobile_v2.png');
+    background-image: url('https://res.cloudinary.com/dmajc7wkx/image/upload/v1772731872/luffy_mobile_v3.png');
     background-attachment: scroll;
     background-size: cover;
     background-position: center top;
